--- a/polinomial_x_y.ipynb
+++ b/polinomial_x_y.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIx79sfQrJC6U05RO780+D",
+      "authorship_tag": "ABX9TyNnR/a5cln1ynxL0VU9d8L3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,8 +48,8 @@
         "print(\"\\ny_train:\")\n",
         "print(y_train)\n",
         "\n",
-        "# Инициализация весового вектора (20 членов полинома × 1 выход)\n",
-        "weights = np.random.uniform(-0.1, 0.1, size=(20, 1)).astype(np.float32)\n",
+        "# Инициализация весового вектора (35 членов полинома × 1 выход)\n",
+        "weights = np.random.uniform(-0.1, 0.1, size=35).astype(np.float32)\n",
         "\n",
         "print(\"\\nНачальные веса:\")\n",
         "print(weights)\n",
@@ -61,15 +61,26 @@
         "def compute_polynomial(x, coeffs):\n",
         "    x1, x2, x3, x4 = x\n",
         "    terms = np.array([\n",
-        "        1,          # Константа\n",
+        "        # Константа\n",
+        "        1,\n",
+        "\n",
+        "        # Линейные члены (4)\n",
         "        x1, x2, x3, x4,\n",
+        "\n",
+        "        # Квадратичные члены (10)\n",
         "        x1*x1, x2*x2, x3*x3, x4*x4,\n",
         "        x1*x2, x1*x3, x1*x4,\n",
         "        x2*x3, x2*x4, x3*x4,\n",
-        "        x1*x2*x3, x1*x2*x4, x1*x3*x4, x2*x3*x4,\n",
-        "        x1*x2*x3*x4\n",
+        "\n",
+        "        # Кубические члены (20)\n",
+        "        x1*x1*x1, x2*x2*x2, x3*x3*x3, x4*x4*x4,\n",
+        "        x1*x1*x2, x1*x1*x3, x1*x1*x4,\n",
+        "        x1*x2*x2, x2*x2*x3, x2*x2*x4,\n",
+        "        x1*x3*x3, x2*x3*x3, x3*x3*x4,\n",
+        "        x1*x4*x4, x2*x4*x4, x3*x4*x4,\n",
+        "        x1*x2*x3, x1*x2*x4, x1*x3*x4, x2*x3*x4\n",
         "    ], dtype=np.float32)\n",
-        "    return np.dot(terms, coeffs)  # Умножение terms (20,) на coeffs (20,1) -> скаляр\n",
+        "    return np.dot(terms, coeffs)  # terms (35,) и coeffs (35,) -> скаляр\n",
         "\n",
         "for epoch in range(epochs):\n",
         "    total_error = 0\n",
@@ -85,16 +96,28 @@
         "        # Градиенты для каждого члена полинома\n",
         "        x1, x2, x3, x4 = x\n",
         "        gradients_terms = np.array([\n",
-        "            1, x1, x2, x3, x4,\n",
+        "            # Константа\n",
+        "            1,\n",
+        "\n",
+        "            # Линейные члены (4)\n",
+        "            x1, x2, x3, x4,\n",
+        "\n",
+        "            # Квадратичные члены (10)\n",
         "            x1*x1, x2*x2, x3*x3, x4*x4,\n",
         "            x1*x2, x1*x3, x1*x4,\n",
         "            x2*x3, x2*x4, x3*x4,\n",
-        "            x1*x2*x3, x1*x2*x4, x1*x3*x4, x2*x3*x4,\n",
-        "            x1*x2*x3*x4\n",
+        "\n",
+        "            # Кубические члены (20)\n",
+        "            x1*x1*x1, x2*x2*x2, x3*x3*x3, x4*x4*x4,\n",
+        "            x1*x1*x2, x1*x1*x3, x1*x1*x4,\n",
+        "            x1*x2*x2, x2*x2*x3, x2*x2*x4,\n",
+        "            x1*x3*x3, x2*x3*x3, x3*x3*x4,\n",
+        "            x1*x4*x4, x2*x4*x4, x3*x4*x4,\n",
+        "            x1*x2*x3, x1*x2*x4, x1*x3*x4, x2*x3*x4\n",
         "        ], dtype=np.float32)\n",
         "\n",
         "        # Обновление весов\n",
-        "        weights -= learning_rate * (error * gradients_terms.reshape(-1, 1))\n",
+        "        weights -= learning_rate * error * gradients_terms\n",
         "\n",
         "    if epoch % 500 == 0:\n",
         "        print(f\"Эпоха {epoch}, Ошибка: {total_error}\")\n",
@@ -106,17 +129,17 @@
         "print(\"\\nРезультаты:\")\n",
         "for i in range(len(X_train)):\n",
         "    x = X_train[i]\n",
-        "    pred = compute_polynomial_vector(x, weights)\n",
-        "    print(f\"{x*10} -> {pred} (Истинное: {y_train[i]})\")"
+        "    pred = compute_polynomial(x, weights)\n",
+        "    print(f\"{x*10} -> {pred:.4f} (Истинное: {y_train[i]})\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MRvRisJU4xTX",
-        "outputId": "15f8658a-0695-4c00-83ee-c4ae8123dce3"
+        "outputId": "9c3b9037-fbb9-4d4f-86b9-9173c894c983"
       },
-      "execution_count": 83,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,82 +161,54 @@
             "[0. 0. 0. 1. 1. 1. 1. 0. 1. 0.]\n",
             "\n",
             "Начальные веса:\n",
-            "[[-0.03311976]\n",
-            " [-0.02108554]\n",
-            " [ 0.00598812]\n",
-            " [-0.06772653]\n",
-            " [ 0.01439918]\n",
-            " [ 0.06108646]\n",
-            " [ 0.05203219]\n",
-            " [-0.06922002]\n",
-            " [-0.07015011]\n",
-            " [-0.04636513]\n",
-            " [-0.02778506]\n",
-            " [-0.01830888]\n",
-            " [ 0.03593944]\n",
-            " [-0.08866391]\n",
-            " [-0.09306546]\n",
-            " [-0.02161789]\n",
-            " [ 0.03943274]\n",
-            " [-0.06131293]\n",
-            " [ 0.0283009 ]\n",
-            " [-0.04803437]]\n",
+            "[ 0.09953445 -0.0472897  -0.04417391  0.08613445 -0.09507112  0.0393378\n",
+            "  0.04506528  0.06727572  0.09488786  0.09512039 -0.08694465  0.06436787\n",
+            "  0.02926199  0.02946843 -0.07433002  0.03003743  0.09649651  0.08236372\n",
+            " -0.01217387 -0.09201041 -0.0275413   0.06527806  0.04029982 -0.00813127\n",
+            " -0.08897969 -0.01462105 -0.00619501  0.08571111  0.02821722 -0.03766942\n",
+            "  0.00506365 -0.08678894  0.09451365 -0.02798802 -0.00442653]\n",
             "\n",
             "\n",
-            "Эпоха 0, Ошибка: [4.193833]\n",
-            "Эпоха 500, Ошибка: [0.40470833]\n",
-            "Эпоха 1000, Ошибка: [0.28809157]\n",
-            "Эпоха 1500, Ошибка: [0.24139288]\n",
-            "Эпоха 2000, Ошибка: [0.21156602]\n",
-            "Эпоха 2500, Ошибка: [0.19021556]\n",
-            "Эпоха 3000, Ошибка: [0.17439309]\n",
-            "Эпоха 3500, Ошибка: [0.1624082]\n",
-            "Эпоха 4000, Ошибка: [0.15313971]\n",
-            "Эпоха 4500, Ошибка: [0.1458207]\n",
-            "Эпоха 5000, Ошибка: [0.1399198]\n",
-            "Эпоха 5500, Ошибка: [0.135068]\n",
-            "Эпоха 6000, Ошибка: [0.1310071]\n",
-            "Эпоха 6500, Ошибка: [0.12755278]\n",
-            "Эпоха 7000, Ошибка: [0.12457297]\n",
-            "Эпоха 7500, Ошибка: [0.12197183]\n",
-            "Эпоха 8000, Ошибка: [0.11967723]\n",
-            "Эпоха 8500, Ошибка: [0.11763468]\n",
-            "Эпоха 9000, Ошибка: [0.1158025]\n",
-            "Эпоха 9500, Ошибка: [0.11414765]\n",
+            "Эпоха 0, Ошибка: 4.059593677520752\n",
+            "Эпоха 500, Ошибка: 0.2643001079559326\n",
+            "Эпоха 1000, Ошибка: 0.19555948674678802\n",
+            "Эпоха 1500, Ошибка: 0.1628638058900833\n",
+            "Эпоха 2000, Ошибка: 0.14123128354549408\n",
+            "Эпоха 2500, Ошибка: 0.1257491260766983\n",
+            "Эпоха 3000, Ошибка: 0.11432375013828278\n",
+            "Эпоха 3500, Ошибка: 0.10575710237026215\n",
+            "Эпоха 4000, Ошибка: 0.09924811124801636\n",
+            "Эпоха 4500, Ошибка: 0.09422845393419266\n",
+            "Эпоха 5000, Ошибка: 0.09028550982475281\n",
+            "Эпоха 5500, Ошибка: 0.08712057024240494\n",
+            "Эпоха 6000, Ошибка: 0.08451767265796661\n",
+            "Эпоха 6500, Ошибка: 0.08232162892818451\n",
+            "Эпоха 7000, Ошибка: 0.0804205909371376\n",
+            "Эпоха 7500, Ошибка: 0.07873497903347015\n",
+            "Эпоха 8000, Ошибка: 0.07720793783664703\n",
+            "Эпоха 8500, Ошибка: 0.07579769194126129\n",
+            "Эпоха 9000, Ошибка: 0.07447584718465805\n",
+            "Эпоха 9500, Ошибка: 0.07322163879871368\n",
             "\n",
             "Обученные веса:\n",
-            "[[ 0.14643833]\n",
-            " [-2.6418684 ]\n",
-            " [-3.597164  ]\n",
-            " [ 4.2341733 ]\n",
-            " [ 1.8613555 ]\n",
-            " [ 7.140307  ]\n",
-            " [-0.14114134]\n",
-            " [-2.7561922 ]\n",
-            " [-0.25476933]\n",
-            " [-4.2229705 ]\n",
-            " [-0.46934846]\n",
-            " [-0.3651136 ]\n",
-            " [ 1.299113  ]\n",
-            " [ 1.1965941 ]\n",
-            " [ 1.3112264 ]\n",
-            " [-1.5233318 ]\n",
-            " [-1.3612746 ]\n",
-            " [-1.5518051 ]\n",
-            " [ 1.4419614 ]\n",
-            " [-1.2545044 ]]\n",
+            "[-0.12461657 -0.8912024  -2.2877898   4.8217797   0.31452504  1.5264146\n",
+            " -1.2647792  -0.34267268  0.2489558  -3.1543257   0.46585986 -0.44428432\n",
+            "  0.5744858   0.16530836  0.9555625   3.2521164   0.9104529  -3.262171\n",
+            " -0.21634063 -0.7015863   0.8615536   1.6275802  -1.9800746   0.9796204\n",
+            "  1.0222491  -2.541638   -0.23687816 -0.15562023 -0.86792517  0.61289823\n",
+            "  0.4264967  -1.2502253  -0.7607565  -0.6721218   0.9729841 ]\n",
             "\n",
             "Результаты:\n",
-            "[5. 2. 1. 0.] -> [-0.15365767] (Истинное: 0.0)\n",
-            "[6. 3. 2. 1.] -> [0.1680276] (Истинное: 0.0)\n",
-            "[4. 1. 1. 0.] -> [0.0860728] (Истинное: 0.0)\n",
-            "[7. 4. 6. 3.] -> [1.128152] (Истинное: 1.0)\n",
-            "[8. 5. 5. 4.] -> [1.0063457] (Истинное: 1.0)\n",
-            "[6. 3. 4. 2.] -> [0.8541] (Истинное: 1.0)\n",
-            "[3. 8. 7. 9.] -> [1.008976] (Истинное: 1.0)\n",
-            "[4. 9. 8. 8.] -> [-0.00792418] (Истинное: 0.0)\n",
-            "[2. 7. 6. 7.] -> [0.9853651] (Истинное: 1.0)\n",
-            "[5. 6. 5. 6.] -> [0.01506759] (Истинное: 0.0)\n"
+            "[5. 2. 1. 0.] -> -0.1630 (Истинное: 0.0)\n",
+            "[6. 3. 2. 1.] -> 0.1322 (Истинное: 0.0)\n",
+            "[4. 1. 1. 0.] -> 0.0847 (Истинное: 0.0)\n",
+            "[7. 4. 6. 3.] -> 1.0674 (Истинное: 1.0)\n",
+            "[8. 5. 5. 4.] -> 1.0107 (Истинное: 1.0)\n",
+            "[6. 3. 4. 2.] -> 0.9182 (Истинное: 1.0)\n",
+            "[3. 8. 7. 9.] -> 1.0037 (Истинное: 1.0)\n",
+            "[4. 9. 8. 8.] -> 0.0000 (Истинное: 0.0)\n",
+            "[2. 7. 6. 7.] -> 0.9939 (Истинное: 1.0)\n",
+            "[5. 6. 5. 6.] -> 0.0045 (Истинное: 0.0)\n"
           ]
         }
       ]
@@ -359,9 +354,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FqiUSLKo38lc",
-        "outputId": "3301c992-e275-480b-e372-92cadf621ba2"
+        "outputId": "fd5af4a2-6c25-4614-e5bb-162a946e4124"
       },
-      "execution_count": 84,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,12 +369,12 @@
             "Четвертой степени: 70\n",
             "\n",
             "=== Линейная модель (членов: 5) ===\n",
-            "Эпоха 0, Ошибка: 11.1366\n",
-            "Эпоха 500, Ошибка: 3.9386\n",
-            "Эпоха 1000, Ошибка: 3.7707\n",
-            "Эпоха 1500, Ошибка: 3.7437\n",
-            "Эпоха 2000, Ошибка: 3.7383\n",
-            "Эпоха 2500, Ошибка: 3.7371\n",
+            "Эпоха 0, Ошибка: 11.1306\n",
+            "Эпоха 500, Ошибка: 3.9402\n",
+            "Эпоха 1000, Ошибка: 3.7710\n",
+            "Эпоха 1500, Ошибка: 3.7438\n",
+            "Эпоха 2000, Ошибка: 3.7384\n",
+            "Эпоха 2500, Ошибка: 3.7372\n",
             "Эпоха 3000, Ошибка: 3.7368\n",
             "Эпоха 3500, Ошибка: 3.7368\n",
             "Эпоха 4000, Ошибка: 3.7367\n",
@@ -410,62 +405,62 @@
             "Финальная ошибка: 3.1204\n",
             "\n",
             "=== Квадратичная модель (членов: 15) ===\n",
-            "Эпоха 0, Ошибка: 11.3190\n",
-            "Эпоха 500, Ошибка: 2.1273\n",
-            "Эпоха 1000, Ошибка: 1.6335\n",
-            "Эпоха 1500, Ошибка: 1.4055\n",
-            "Эпоха 2000, Ошибка: 1.2632\n",
-            "Эпоха 2500, Ошибка: 1.1607\n",
-            "Эпоха 3000, Ошибка: 1.0819\n",
-            "Эпоха 3500, Ошибка: 1.0191\n",
-            "Эпоха 4000, Ошибка: 0.9679\n",
-            "Эпоха 4500, Ошибка: 0.9252\n",
-            "Эпоха 5000, Ошибка: 0.8891\n",
-            "Эпоха 5500, Ошибка: 0.8580\n",
-            "Эпоха 6000, Ошибка: 0.8309\n",
-            "Эпоха 6500, Ошибка: 0.8071\n",
-            "Эпоха 7000, Ошибка: 0.7859\n",
-            "Эпоха 7500, Ошибка: 0.7669\n",
-            "Эпоха 8000, Ошибка: 0.7498\n",
-            "Эпоха 8500, Ошибка: 0.7343\n",
-            "Эпоха 9000, Ошибка: 0.7202\n",
-            "Эпоха 9500, Ошибка: 0.7074\n",
+            "Эпоха 0, Ошибка: 12.2524\n",
+            "Эпоха 500, Ошибка: 2.1298\n",
+            "Эпоха 1000, Ошибка: 1.6365\n",
+            "Эпоха 1500, Ошибка: 1.4082\n",
+            "Эпоха 2000, Ошибка: 1.2656\n",
+            "Эпоха 2500, Ошибка: 1.1629\n",
+            "Эпоха 3000, Ошибка: 1.0839\n",
+            "Эпоха 3500, Ошибка: 1.0210\n",
+            "Эпоха 4000, Ошибка: 0.9697\n",
+            "Эпоха 4500, Ошибка: 0.9269\n",
+            "Эпоха 5000, Ошибка: 0.8907\n",
+            "Эпоха 5500, Ошибка: 0.8595\n",
+            "Эпоха 6000, Ошибка: 0.8324\n",
+            "Эпоха 6500, Ошибка: 0.8084\n",
+            "Эпоха 7000, Ошибка: 0.7872\n",
+            "Эпоха 7500, Ошибка: 0.7682\n",
+            "Эпоха 8000, Ошибка: 0.7510\n",
+            "Эпоха 8500, Ошибка: 0.7355\n",
+            "Эпоха 9000, Ошибка: 0.7214\n",
+            "Эпоха 9500, Ошибка: 0.7085\n",
             "\n",
             "Результаты:\n",
-            "[5. 2. 1. 0.] -> [-0.13, 1.16, 0.47] (Истинное: [0. 1. 0.])\n",
+            "[5. 2. 1. 0.] -> [-0.14, 1.16, 0.47] (Истинное: [0. 1. 0.])\n",
             "[6. 3. 2. 1.] -> [0.16, 0.81, 0.67] (Истинное: [0. 1. 1.])\n",
             "[4. 1. 1. 0.] -> [0.08, 0.90, 0.81] (Истинное: [0. 1. 1.])\n",
             "[7. 4. 6. 3.] -> [1.14, -0.17, 0.95] (Истинное: [1. 0. 1.])\n",
             "[8. 5. 5. 4.] -> [1.01, -0.01, 1.03] (Истинное: [1. 0. 1.])\n",
             "[6. 3. 4. 2.] -> [0.84, 0.19, 1.04] (Истинное: [1. 0. 1.])\n",
             "[3. 8. 7. 9.] -> [1.01, 0.99, 0.96] (Истинное: [1. 1. 1.])\n",
-            "[4. 9. 8. 8.] -> [-0.02, 0.02, 0.96] (Истинное: [0. 0. 1.])\n",
+            "[4. 9. 8. 8.] -> [-0.01, 0.02, 0.96] (Истинное: [0. 0. 1.])\n",
             "[2. 7. 6. 7.] -> [0.99, 0.01, 1.02] (Истинное: [1. 0. 1.])\n",
             "[5. 6. 5. 6.] -> [0.02, 0.98, 0.02] (Истинное: [0. 1. 0.])\n",
             "\n",
-            "Финальная ошибка: 0.6031\n",
+            "Финальная ошибка: 0.6040\n",
             "\n",
             "=== Кубическая модель (членов: 35) ===\n",
-            "Эпоха 0, Ошибка: 13.4409\n",
-            "Эпоха 500, Ошибка: 1.3851\n",
-            "Эпоха 1000, Ошибка: 1.1082\n",
-            "Эпоха 1500, Ошибка: 0.9573\n",
-            "Эпоха 2000, Ошибка: 0.8537\n",
-            "Эпоха 2500, Ошибка: 0.7785\n",
-            "Эпоха 3000, Ошибка: 0.7224\n",
-            "Эпоха 3500, Ошибка: 0.6798\n",
-            "Эпоха 4000, Ошибка: 0.6468\n",
-            "Эпоха 4500, Ошибка: 0.6208\n",
-            "Эпоха 5000, Ошибка: 0.5997\n",
-            "Эпоха 5500, Ошибка: 0.5823\n",
-            "Эпоха 6000, Ошибка: 0.5676\n",
-            "Эпоха 6500, Ошибка: 0.5547\n",
-            "Эпоха 7000, Ошибка: 0.5432\n",
-            "Эпоха 7500, Ошибка: 0.5328\n",
-            "Эпоха 8000, Ошибка: 0.5231\n",
-            "Эпоха 8500, Ошибка: 0.5140\n",
-            "Эпоха 9000, Ошибка: 0.5053\n",
-            "Эпоха 9500, Ошибка: 0.4970\n",
+            "Эпоха 0, Ошибка: 13.5944\n",
+            "Эпоха 500, Ошибка: 1.3977\n",
+            "Эпоха 1000, Ошибка: 1.1164\n",
+            "Эпоха 1500, Ошибка: 0.9629\n",
+            "Эпоха 2000, Ошибка: 0.8577\n",
+            "Эпоха 2500, Ошибка: 0.7814\n",
+            "Эпоха 3000, Ошибка: 0.7246\n",
+            "Эпоха 3500, Ошибка: 0.6814\n",
+            "Эпоха 4000, Ошибка: 0.6480\n",
+            "Эпоха 4500, Ошибка: 0.6217\n",
+            "Эпоха 5000, Ошибка: 0.6005\n",
+            "Эпоха 5500, Ошибка: 0.5829\n",
+            "Эпоха 6000, Ошибка: 0.5680\n",
+            "Эпоха 6500, Ошибка: 0.5551\n",
+            "Эпоха 7000, Ошибка: 0.5436\n",
+            "Эпоха 7500, Ошибка: 0.5331\n",
+            "Эпоха 8000, Ошибка: 0.5234\n",
+            "Эпоха 8500, Ошибка: 0.5142\n",
+            "Эпоха 9000, Ошибка: 0.5056\n",
+            "Эпоха 9500, Ошибка: 0.4973\n",
             "\n",
             "Результаты:\n",
             "[5. 2. 1. 0.] -> [-0.16, 1.18, 0.37] (Истинное: [0. 1. 0.])\n",
@@ -479,33 +474,33 @@
             "[2. 7. 6. 7.] -> [0.99, 0.01, 1.01] (Истинное: [1. 0. 1.])\n",
             "[5. 6. 5. 6.] -> [0.00, 0.99, -0.01] (Истинное: [0. 1. 0.])\n",
             "\n",
-            "Финальная ошибка: 0.4253\n",
+            "Финальная ошибка: 0.4255\n",
             "\n",
             "=== Полином 4-й степени (членов: 70) ===\n",
-            "Эпоха 0, Ошибка: 15.1064\n",
-            "Эпоха 500, Ошибка: 1.1876\n",
-            "Эпоха 1000, Ошибка: 0.9293\n",
-            "Эпоха 1500, Ошибка: 0.7805\n",
-            "Эпоха 2000, Ошибка: 0.6907\n",
-            "Эпоха 2500, Ошибка: 0.6339\n",
-            "Эпоха 3000, Ошибка: 0.5955\n",
-            "Эпоха 3500, Ошибка: 0.5676\n",
-            "Эпоха 4000, Ошибка: 0.5455\n",
-            "Эпоха 4500, Ошибка: 0.5270\n",
-            "Эпоха 5000, Ошибка: 0.5105\n",
-            "Эпоха 5500, Ошибка: 0.4953\n",
-            "Эпоха 6000, Ошибка: 0.4810\n",
-            "Эпоха 6500, Ошибка: 0.4674\n",
-            "Эпоха 7000, Ошибка: 0.4544\n",
-            "Эпоха 7500, Ошибка: 0.4417\n",
-            "Эпоха 8000, Ошибка: 0.4295\n",
-            "Эпоха 8500, Ошибка: 0.4176\n",
-            "Эпоха 9000, Ошибка: 0.4060\n",
-            "Эпоха 9500, Ошибка: 0.3948\n",
+            "Эпоха 0, Ошибка: 15.1284\n",
+            "Эпоха 500, Ошибка: 1.1677\n",
+            "Эпоха 1000, Ошибка: 0.9167\n",
+            "Эпоха 1500, Ошибка: 0.7724\n",
+            "Эпоха 2000, Ошибка: 0.6851\n",
+            "Эпоха 2500, Ошибка: 0.6297\n",
+            "Эпоха 3000, Ошибка: 0.5921\n",
+            "Эпоха 3500, Ошибка: 0.5646\n",
+            "Эпоха 4000, Ошибка: 0.5429\n",
+            "Эпоха 4500, Ошибка: 0.5245\n",
+            "Эпоха 5000, Ошибка: 0.5082\n",
+            "Эпоха 5500, Ошибка: 0.4931\n",
+            "Эпоха 6000, Ошибка: 0.4789\n",
+            "Эпоха 6500, Ошибка: 0.4654\n",
+            "Эпоха 7000, Ошибка: 0.4524\n",
+            "Эпоха 7500, Ошибка: 0.4398\n",
+            "Эпоха 8000, Ошибка: 0.4276\n",
+            "Эпоха 8500, Ошибка: 0.4157\n",
+            "Эпоха 9000, Ошибка: 0.4042\n",
+            "Эпоха 9500, Ошибка: 0.3931\n",
             "\n",
             "Результаты:\n",
-            "[5. 2. 1. 0.] -> [-0.15, 1.16, 0.35] (Истинное: [0. 1. 0.])\n",
-            "[6. 3. 2. 1.] -> [0.11, 0.89, 0.75] (Истинное: [0. 1. 1.])\n",
+            "[5. 2. 1. 0.] -> [-0.15, 1.16, 0.34] (Истинное: [0. 1. 0.])\n",
+            "[6. 3. 2. 1.] -> [0.11, 0.89, 0.76] (Истинное: [0. 1. 1.])\n",
             "[4. 1. 1. 0.] -> [0.08, 0.92, 0.82] (Истинное: [0. 1. 1.])\n",
             "[7. 4. 6. 3.] -> [1.04, -0.05, 0.90] (Истинное: [1. 0. 1.])\n",
             "[8. 5. 5. 4.] -> [1.01, -0.01, 0.98] (Истинное: [1. 0. 1.])\n",
@@ -515,7 +510,7 @@
             "[2. 7. 6. 7.] -> [1.00, 0.00, 1.01] (Истинное: [1. 0. 1.])\n",
             "[5. 6. 5. 6.] -> [0.00, 1.00, -0.01] (Истинное: [0. 1. 0.])\n",
             "\n",
-            "Финальная ошибка: 0.3344\n"
+            "Финальная ошибка: 0.3329\n"
           ]
         }
       ]
