--- a/polinomial_simple.ipynb
+++ b/polinomial_simple.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1sMhglR6IpbgK5qNi3ToW",
+      "authorship_tag": "ABX9TyMRNhi0I6CKrIKevSJmbdCB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sip5wTD-NsFS",
-        "outputId": "2cb39af4-52dc-4c24-9549-e7263e641c77"
+        "outputId": "b9377808-0989-445d-ffca-7850c5cb267c"
       },
       "outputs": [
         {
@@ -57,20 +57,20 @@
             "[0. 0. 0. 1. 1. 1. 1. 0. 1. 0.]\n",
             "\n",
             "Начальные веса:\n",
-            "[ 0.08959855 -0.04593083  0.05601776  0.05222572  0.04004857]\n",
+            "[-0.06498353 -0.01739916  0.06963526  0.0687026   0.05796387]\n",
             "\n",
             "\n",
-            "Эпоха 0, Ошибка: 3.1090426445007324\n",
-            "Эпоха 500, Ошибка: 1.5120575428009033\n",
-            "Эпоха 1000, Ошибка: 1.390214204788208\n",
-            "Эпоха 1500, Ошибка: 1.36503005027771\n",
-            "Эпоха 2000, Ошибка: 1.3587838411331177\n",
-            "Эпоха 2500, Ошибка: 1.356945514678955\n",
-            "Эпоха 3000, Ошибка: 1.3563134670257568\n",
+            "Эпоха 0, Ошибка: 3.3627219200134277\n",
+            "Эпоха 500, Ошибка: 1.5125329494476318\n",
+            "Эпоха 1000, Ошибка: 1.3902866840362549\n",
+            "Эпоха 1500, Ошибка: 1.3650482892990112\n",
+            "Эпоха 2000, Ошибка: 1.3587884902954102\n",
+            "Эпоха 2500, Ошибка: 1.3569473028182983\n",
+            "Эпоха 3000, Ошибка: 1.3563144207000732\n",
             "Эпоха 3500, Ошибка: 1.3560714721679688\n",
-            "Эпоха 4000, Ошибка: 1.3559726476669312\n",
-            "Эпоха 4500, Ошибка: 1.3559316396713257\n",
-            "Эпоха 5000, Ошибка: 1.355914831161499\n",
+            "Эпоха 4000, Ошибка: 1.3559730052947998\n",
+            "Эпоха 4500, Ошибка: 1.3559322357177734\n",
+            "Эпоха 5000, Ошибка: 1.35591459274292\n",
             "Эпоха 5500, Ошибка: 1.3559068441390991\n",
             "Эпоха 6000, Ошибка: 1.3559050559997559\n",
             "Эпоха 6500, Ошибка: 1.3559050559997559\n",
@@ -109,7 +109,6 @@
         "    [5, 6, 5, 6]\n",
         "], dtype=np.float32) / 10.0  # Нормализация\n",
         "\n",
-        "# Простые бинарные метки (0 или 1)\n",
         "y_train = np.array([0, 0, 0, 1, 1, 1, 1, 0, 1, 0], dtype=np.float32)\n",
         "\n",
         "print(\"X_train:\")\n",
@@ -117,7 +116,7 @@
         "print(\"\\ny_train:\")\n",
         "print(y_train)\n",
         "\n",
-        "# Инициализация весового вектора (5 членов линейного полинома: 1, x1, x2, x3, x4)\n",
+        "# Инициализация весов (5 членов: 1, x1, x2, x3, x4)\n",
         "weights = np.random.uniform(-0.1, 0.1, size=5).astype(np.float32)\n",
         "\n",
         "print(\"\\nНачальные веса:\")\n",
@@ -127,27 +126,23 @@
         "learning_rate = 0.1\n",
         "epochs = 10000\n",
         "\n",
-        "def compute_linear(x):\n",
-        "    x1, x2, x3, x4 = x\n",
-        "    terms = np.array([1, x1, x2, x3, x4], dtype=np.float32)\n",
-        "    return np.dot(terms, weights)\n",
-        "\n",
         "for epoch in range(epochs):\n",
         "    total_error = 0\n",
         "    for i in range(len(X_train)):\n",
         "        x = X_train[i]\n",
         "        target = y_train[i]\n",
         "\n",
-        "        # Прямой проход: получаем выход\n",
-        "        prediction = compute_linear(x)\n",
+        "        # Вычисление линейного полинома: prediction = w0 + w1*x1 + w2*x2 + w3*x3 + w4*x4\n",
+        "        terms = np.array([1, x[0], x[1], x[2], x[3]], dtype=np.float32)\n",
+        "        prediction = np.dot(terms, weights)\n",
         "        error = prediction - target\n",
-        "        total_error += error**2\n",
+        "        total_error += error ** 2\n",
         "\n",
-        "        # Градиенты для каждого члена полинома\n",
-        "        gradients_terms = np.array([1, x[0], x[1], x[2], x[3]], dtype=np.float32)\n",
+        "        # Градиенты для каждого веса (производные по w0, w1, w2, w3, w4)\n",
+        "        gradients = terms  # т.к. ∂(prediction)/∂w = term\n",
         "\n",
         "        # Обновление весов\n",
-        "        weights -= learning_rate * error * gradients_terms\n",
+        "        weights -= learning_rate * error * gradients\n",
         "\n",
         "    if epoch % 500 == 0:\n",
         "        print(f\"Эпоха {epoch}, Ошибка: {total_error}\")\n",
@@ -159,8 +154,9 @@
         "print(\"\\nРезультаты:\")\n",
         "for i in range(len(X_train)):\n",
         "    x = X_train[i]\n",
-        "    pred = compute_linear(x)\n",
-        "    print(f\"{x*10} -> {pred:.4f} (Истинное: {y_train[i]})\")"
+        "    terms = np.array([1, x[0], x[1], x[2], x[3]], dtype=np.float32)\n",
+        "    pred = np.dot(terms, weights)\n",
+        "    print(f\"{x * 10} -> {pred:.4f} (Истинное: {y_train[i]})\")"
       ]
     }
   ]
