--- a/polinomial_simple.ipynb
+++ b/polinomial_simple.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRNhi0I6CKrIKevSJmbdCB",
+      "authorship_tag": "ABX9TyMw6SyuJwu0laA6Z0Px5iKe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sip5wTD-NsFS",
-        "outputId": "b9377808-0989-445d-ffca-7850c5cb267c"
+        "outputId": "b2cb639b-9953-46c0-8f92-b35cfb592337"
       },
       "outputs": [
         {
@@ -57,21 +57,21 @@
             "[0. 0. 0. 1. 1. 1. 1. 0. 1. 0.]\n",
             "\n",
             "Начальные веса:\n",
-            "[-0.06498353 -0.01739916  0.06963526  0.0687026   0.05796387]\n",
+            "[ 0.09260944 -0.07193656  0.00296778  0.04738764  0.08060804]\n",
             "\n",
             "\n",
-            "Эпоха 0, Ошибка: 3.3627219200134277\n",
-            "Эпоха 500, Ошибка: 1.5125329494476318\n",
-            "Эпоха 1000, Ошибка: 1.3902866840362549\n",
-            "Эпоха 1500, Ошибка: 1.3650482892990112\n",
-            "Эпоха 2000, Ошибка: 1.3587884902954102\n",
-            "Эпоха 2500, Ошибка: 1.3569473028182983\n",
-            "Эпоха 3000, Ошибка: 1.3563144207000732\n",
-            "Эпоха 3500, Ошибка: 1.3560714721679688\n",
-            "Эпоха 4000, Ошибка: 1.3559730052947998\n",
-            "Эпоха 4500, Ошибка: 1.3559322357177734\n",
-            "Эпоха 5000, Ошибка: 1.35591459274292\n",
-            "Эпоха 5500, Ошибка: 1.3559068441390991\n",
+            "Эпоха 0, Ошибка: 3.1499991416931152\n",
+            "Эпоха 500, Ошибка: 1.5090471506118774\n",
+            "Эпоха 1000, Ошибка: 1.389596700668335\n",
+            "Эпоха 1500, Ошибка: 1.3648878335952759\n",
+            "Эпоха 2000, Ошибка: 1.3587439060211182\n",
+            "Эпоха 2500, Ошибка: 1.3569326400756836\n",
+            "Эпоха 3000, Ошибка: 1.3563083410263062\n",
+            "Эпоха 3500, Ошибка: 1.3560692071914673\n",
+            "Эпоха 4000, Ошибка: 1.3559720516204834\n",
+            "Эпоха 4500, Ошибка: 1.355931282043457\n",
+            "Эпоха 5000, Ошибка: 1.3559139966964722\n",
+            "Эпоха 5500, Ошибка: 1.3559062480926514\n",
             "Эпоха 6000, Ошибка: 1.3559050559997559\n",
             "Эпоха 6500, Ошибка: 1.3559050559997559\n",
             "Эпоха 7000, Ошибка: 1.3559050559997559\n",
@@ -138,11 +138,8 @@
         "        error = prediction - target\n",
         "        total_error += error ** 2\n",
         "\n",
-        "        # Градиенты для каждого веса (производные по w0, w1, w2, w3, w4)\n",
-        "        gradients = terms  # т.к. ∂(prediction)/∂w = term\n",
-        "\n",
         "        # Обновление весов\n",
-        "        weights -= learning_rate * error * gradients\n",
+        "        weights -= learning_rate * error * terms\n",
         "\n",
         "    if epoch % 500 == 0:\n",
         "        print(f\"Эпоха {epoch}, Ошибка: {total_error}\")\n",
