--- a/polinomial_simple.ipynb
+++ b/polinomial_simple.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMw6SyuJwu0laA6Z0Px5iKe",
+      "authorship_tag": "ABX9TyNOjT5b9iiXWHftmr0stpPc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sip5wTD-NsFS",
-        "outputId": "b2cb639b-9953-46c0-8f92-b35cfb592337"
+        "outputId": "02d10f4f-b61e-48da-f882-18592114b4ba"
       },
       "outputs": [
         {
@@ -50,51 +50,49 @@
             " [0.6 0.3 0.4 0.2]\n",
             " [0.3 0.8 0.7 0.9]\n",
             " [0.4 0.9 0.8 0.8]\n",
-            " [0.2 0.7 0.6 0.7]\n",
-            " [0.5 0.6 0.5 0.6]]\n",
+            " [0.2 0.7 0.6 0.7]]\n",
             "\n",
             "y_train:\n",
-            "[0. 0. 0. 1. 1. 1. 1. 0. 1. 0.]\n",
+            "[0. 0. 0. 1. 1. 1. 1. 0. 1.]\n",
             "\n",
             "Начальные веса:\n",
-            "[ 0.09260944 -0.07193656  0.00296778  0.04738764  0.08060804]\n",
+            "[ 0.08647399  0.07661039  0.06489561 -0.017115   -0.05278393]\n",
             "\n",
             "\n",
-            "Эпоха 0, Ошибка: 3.1499991416931152\n",
-            "Эпоха 500, Ошибка: 1.5090471506118774\n",
-            "Эпоха 1000, Ошибка: 1.389596700668335\n",
-            "Эпоха 1500, Ошибка: 1.3648878335952759\n",
-            "Эпоха 2000, Ошибка: 1.3587439060211182\n",
-            "Эпоха 2500, Ошибка: 1.3569326400756836\n",
-            "Эпоха 3000, Ошибка: 1.3563083410263062\n",
-            "Эпоха 3500, Ошибка: 1.3560692071914673\n",
-            "Эпоха 4000, Ошибка: 1.3559720516204834\n",
-            "Эпоха 4500, Ошибка: 1.355931282043457\n",
-            "Эпоха 5000, Ошибка: 1.3559139966964722\n",
-            "Эпоха 5500, Ошибка: 1.3559062480926514\n",
-            "Эпоха 6000, Ошибка: 1.3559050559997559\n",
-            "Эпоха 6500, Ошибка: 1.3559050559997559\n",
-            "Эпоха 7000, Ошибка: 1.3559050559997559\n",
-            "Эпоха 7500, Ошибка: 1.3559050559997559\n",
-            "Эпоха 8000, Ошибка: 1.3559050559997559\n",
-            "Эпоха 8500, Ошибка: 1.3559050559997559\n",
-            "Эпоха 9000, Ошибка: 1.3559050559997559\n",
-            "Эпоха 9500, Ошибка: 1.3559050559997559\n",
+            "Эпоха 0, Ошибка: 2.8374757766723633\n",
+            "Эпоха 500, Ошибка: 0.9802885055541992\n",
+            "Эпоха 1000, Ошибка: 0.7728320360183716\n",
+            "Эпоха 1500, Ошибка: 0.7184216976165771\n",
+            "Эпоха 2000, Ошибка: 0.7021446824073792\n",
+            "Эпоха 2500, Ошибка: 0.6966232657432556\n",
+            "Эпоха 3000, Ошибка: 0.6945061683654785\n",
+            "Эпоха 3500, Ошибка: 0.693612813949585\n",
+            "Эпоха 4000, Ошибка: 0.6932108402252197\n",
+            "Эпоха 4500, Ошибка: 0.6930248737335205\n",
+            "Эпоха 5000, Ошибка: 0.6929363012313843\n",
+            "Эпоха 5500, Ошибка: 0.6928945779800415\n",
+            "Эпоха 6000, Ошибка: 0.6928736567497253\n",
+            "Эпоха 6500, Ошибка: 0.6928638815879822\n",
+            "Эпоха 7000, Ошибка: 0.6928602457046509\n",
+            "Эпоха 7500, Ошибка: 0.6928602457046509\n",
+            "Эпоха 8000, Ошибка: 0.6928602457046509\n",
+            "Эпоха 8500, Ошибка: 0.6928602457046509\n",
+            "Эпоха 9000, Ошибка: 0.6928602457046509\n",
+            "Эпоха 9500, Ошибка: 0.6928602457046509\n",
             "\n",
             "Обученные веса:\n",
-            "[ 0.44128907  0.40436864 -5.522152    2.9876735   2.8026304 ]\n",
+            "[ 0.38000336  1.1639816  -6.2240186   1.5708383   4.8351154 ]\n",
             "\n",
             "Результаты:\n",
-            "[5. 2. 1. 0.] -> -0.1622 (Истинное: 0.0)\n",
-            "[6. 3. 2. 1.] -> -0.0949 (Истинное: 0.0)\n",
-            "[4. 1. 1. 0.] -> 0.3496 (Истинное: 0.0)\n",
-            "[7. 4. 6. 3.] -> 1.1489 (Истинное: 1.0)\n",
-            "[8. 5. 5. 4.] -> 0.6186 (Истинное: 1.0)\n",
-            "[6. 3. 4. 2.] -> 0.7829 (Истинное: 1.0)\n",
-            "[3. 8. 7. 9.] -> 0.7586 (Истинное: 1.0)\n",
-            "[4. 9. 8. 8.] -> 0.2653 (Истинное: 0.0)\n",
-            "[2. 7. 6. 7.] -> 0.4111 (Истинное: 1.0)\n",
-            "[5. 6. 5. 6.] -> 0.5056 (Истинное: 0.0)\n"
+            "[5. 2. 1. 0.] -> -0.1257 (Истинное: 0.0)\n",
+            "[6. 3. 2. 1.] -> 0.0089 (Истинное: 0.0)\n",
+            "[4. 1. 1. 0.] -> 0.3803 (Истинное: 0.0)\n",
+            "[7. 4. 6. 3.] -> 1.0982 (Истинное: 1.0)\n",
+            "[8. 5. 5. 4.] -> 0.9186 (Истинное: 1.0)\n",
+            "[6. 3. 4. 2.] -> 0.8065 (Истинное: 1.0)\n",
+            "[3. 8. 7. 9.] -> 1.2012 (Истинное: 1.0)\n",
+            "[4. 9. 8. 8.] -> 0.3687 (Истинное: 0.0)\n",
+            "[2. 7. 6. 7.] -> 0.5831 (Истинное: 1.0)\n"
           ]
         }
       ],
@@ -106,10 +104,9 @@
         "    [5, 2, 1, 0], [6, 3, 2, 1], [4, 1, 1, 0],\n",
         "    [7, 4, 6, 3], [8, 5, 5, 4], [6, 3, 4, 2],\n",
         "    [3, 8, 7, 9], [4, 9, 8, 8], [2, 7, 6, 7],\n",
-        "    [5, 6, 5, 6]\n",
         "], dtype=np.float32) / 10.0  # Нормализация\n",
         "\n",
-        "y_train = np.array([0, 0, 0, 1, 1, 1, 1, 0, 1, 0], dtype=np.float32)\n",
+        "y_train = np.array([0, 0, 0, 1, 1, 1, 1, 0, 1], dtype=np.float32)\n",
         "\n",
         "print(\"X_train:\")\n",
         "print(X_train)\n",
