--- a/polinomial_simple.ipynb
+++ b/polinomial_simple.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOjT5b9iiXWHftmr0stpPc",
+      "authorship_tag": "ABX9TyMTKC2pSfagm3HR34+DpO9E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sip5wTD-NsFS",
-        "outputId": "02d10f4f-b61e-48da-f882-18592114b4ba"
+        "outputId": "2382a901-0e40-4f59-d10e-65e856bb19f0"
       },
       "outputs": [
         {
@@ -56,23 +56,23 @@
             "[0. 0. 0. 1. 1. 1. 1. 0. 1.]\n",
             "\n",
             "Начальные веса:\n",
-            "[ 0.08647399  0.07661039  0.06489561 -0.017115   -0.05278393]\n",
+            "[-0.01309192 -0.08581145 -0.05158012  0.0292474  -0.07811698]\n",
             "\n",
             "\n",
-            "Эпоха 0, Ошибка: 2.8374757766723633\n",
-            "Эпоха 500, Ошибка: 0.9802885055541992\n",
-            "Эпоха 1000, Ошибка: 0.7728320360183716\n",
-            "Эпоха 1500, Ошибка: 0.7184216976165771\n",
-            "Эпоха 2000, Ошибка: 0.7021446824073792\n",
-            "Эпоха 2500, Ошибка: 0.6966232657432556\n",
-            "Эпоха 3000, Ошибка: 0.6945061683654785\n",
-            "Эпоха 3500, Ошибка: 0.693612813949585\n",
-            "Эпоха 4000, Ошибка: 0.6932108402252197\n",
-            "Эпоха 4500, Ошибка: 0.6930248737335205\n",
-            "Эпоха 5000, Ошибка: 0.6929363012313843\n",
-            "Эпоха 5500, Ошибка: 0.6928945779800415\n",
-            "Эпоха 6000, Ошибка: 0.6928736567497253\n",
-            "Эпоха 6500, Ошибка: 0.6928638815879822\n",
+            "Эпоха 0, Ошибка: 3.4911158084869385\n",
+            "Эпоха 500, Ошибка: 0.9781957864761353\n",
+            "Эпоха 1000, Ошибка: 0.7724632024765015\n",
+            "Эпоха 1500, Ошибка: 0.7183164358139038\n",
+            "Эпоха 2000, Ошибка: 0.7021081447601318\n",
+            "Эпоха 2500, Ошибка: 0.6966086626052856\n",
+            "Эпоха 3000, Ошибка: 0.6944998502731323\n",
+            "Эпоха 3500, Ошибка: 0.6936099529266357\n",
+            "Эпоха 4000, Ошибка: 0.6932099461555481\n",
+            "Эпоха 4500, Ошибка: 0.6930245757102966\n",
+            "Эпоха 5000, Ошибка: 0.6929359436035156\n",
+            "Эпоха 5500, Ошибка: 0.6928939819335938\n",
+            "Эпоха 6000, Ошибка: 0.6928738355636597\n",
+            "Эпоха 6500, Ошибка: 0.6928644180297852\n",
             "Эпоха 7000, Ошибка: 0.6928602457046509\n",
             "Эпоха 7500, Ошибка: 0.6928602457046509\n",
             "Эпоха 8000, Ошибка: 0.6928602457046509\n",
@@ -151,6 +151,77 @@
         "    terms = np.array([1, x[0], x[1], x[2], x[3]], dtype=np.float32)\n",
         "    pred = np.dot(terms, weights)\n",
         "    print(f\"{x * 10} -> {pred:.4f} (Истинное: {y_train[i]})\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "X = np.array([\n",
+        "    [5, 2, 1, 0], [6, 3, 2, 1], [4, 1, 1, 0],\n",
+        "    [7, 4, 6, 3], [8, 5, 5, 4], [6, 3, 4, 2],\n",
+        "    [3, 8, 7, 9], [4, 9, 8, 8], [2, 7, 6, 7],\n",
+        "], dtype=np.float32) / 10.0\n",
+        "\n",
+        "\n",
+        "y = np.array([0, 0, 0, 1, 1, 1, 1, 0, 1], dtype=np.float32)\n",
+        "\n",
+        "\n",
+        "weights = np.random.uniform(-0.1, 0.1, size=15).astype(np.float32)\n",
+        "\n",
+        "\n",
+        "def get_terms(x):\n",
+        "    x1, x2, x3, x4 = x\n",
+        "    return np.array([\n",
+        "        1,\n",
+        "        x1, x2, x3, x4,\n",
+        "        x1*x1, x2*x2, x3*x3, x4*x4,\n",
+        "        x1*x2, x1*x3, x1*x4,\n",
+        "        x2*x3, x2*x4, x3*x4\n",
+        "    ], dtype=np.float32)\n",
+        "\n",
+        "\n",
+        "for _ in range(10000):\n",
+        "    for i in range(len(X)):\n",
+        "        terms = get_terms(X[i])\n",
+        "        prediction = np.dot(terms, weights)\n",
+        "        error = prediction - y[i]\n",
+        "        weights -= 0.1 * error * terms\n",
+        "\n",
+        "\n",
+        "print(\"Результаты:\")\n",
+        "for i in range(len(X)):\n",
+        "    terms = get_terms(X[i])\n",
+        "    prediction = np.dot(terms, weights)\n",
+        "    print(f\"{X[i] * 10} -> {prediction:.4f} (Истинное: {y[i]})\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "De5-nBbzdMre",
+        "outputId": "334e013c-f12c-41cb-b010-fb2271b57944"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Результаты:\n",
+            "[5. 2. 1. 0.] -> -0.1678 (Истинное: 0.0)\n",
+            "[6. 3. 2. 1.] -> 0.1499 (Истинное: 0.0)\n",
+            "[4. 1. 1. 0.] -> 0.0865 (Истинное: 0.0)\n",
+            "[7. 4. 6. 3.] -> 1.0844 (Истинное: 1.0)\n",
+            "[8. 5. 5. 4.] -> 1.0087 (Истинное: 1.0)\n",
+            "[6. 3. 4. 2.] -> 0.9013 (Истинное: 1.0)\n",
+            "[3. 8. 7. 9.] -> 1.0118 (Истинное: 1.0)\n",
+            "[4. 9. 8. 8.] -> -0.0003 (Истинное: 0.0)\n",
+            "[2. 7. 6. 7.] -> 0.9969 (Истинное: 1.0)\n"
+          ]
+        }
       ]
     }
   ]
